[package]
name = "traceroot-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for TraceRoot tracing and logging"

[dependencies]
traceroot_macros = { path = "../traceroot-macros" }
# tracing & logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-attributes = "0.1"

# OpenTelemetry OTLP exporter
opentelemetry = "0.25"
opentelemetry-otlp = { version = "0.25", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.25", features = ["rt-tokio"] }

# serde for config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# errors
thiserror = "1"
anyhow = "1.0.99"
