[package]
name = "traceroot-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for traceroot"
license = "MIT"
repository = "https://github.com/traceroot-ai/traceroot-sdk-rs"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
